* Small fixes - Particles instead of particle - Remove :: - Add tag Optimization for G-Buffer Optimizations - Projects size on mobile

--- a/style.css
+++ b/style.css
@@ -14714,6 +14714,10 @@ summary {
         height: 0px;
     }
 
+    #projects {
+        font-size: 8px;
+    }
+
     #igenbq-3-2-2-2-2-2-2-2-2 {
         max-width: 0px;
         width: 0px;
